feat: add support for OpenAI-compatible APIs with configurable base URL and new testing script

--- a/.env.example
+++ b/.env.example
@@ -1,60 +1,90 @@
-VERSION=0.1.26
+# CORE Environment Configuration
+# Copy this file to .env and fill in your values
 
-# Nest run in docker, change host to database container name
-DB_HOST=localhost
-DB_PORT=5432
+# Database Configuration
+DATABASE_URL=postgresql://user:password@localhost:5432/core
+DIRECT_URL=postgresql://user:password@localhost:5432/core
 
-# POSTGRES
-POSTGRES_USER=docker
-POSTGRES_PASSWORD=docker
-POSTGRES_DB=core
+# OpenAI Configuration
+OPENAI_API_KEY=your_openai_api_key_here
+# Optional: Use OpenAI-compatible APIs
+# OPENAI_BASE_URL=https://your-api-endpoint.com/v1
 
-LOGIN_ORIGIN=http://localhost:3033
-DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=core
+# Examples for different providers:
+# Azure OpenAI: OPENAI_BASE_URL=https://your-resource.openai.azure.com/
+# LocalAI: OPENAI_BASE_URL=http://localhost:8080/v1
+# Ollama: OPENAI_BASE_URL=http://localhost:11434/v1
+# Together AI: OPENAI_BASE_URL=https://api.together.xyz/v1
+# Groq: OPENAI_BASE_URL=https://api.groq.com/openai/v1
+# Perplexity: OPENAI_BASE_URL=https://api.perplexity.ai
 
-# This sets the URL used for direct connections to the database and should only be needed in limited circumstances
-# See: https://www.prisma.io/docs/reference/api-reference/prisma-schema-reference#fields:~:text=the%20shadow%20database.-,directUrl,-No
-DIRECT_URL=${DATABASE_URL}
+# Other AI Providers
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+GOOGLE_GENERATIVE_AI_API_KEY=your_google_api_key_here
 
-REMIX_APP_PORT=3033
-APP_ENV=production
-NODE_ENV=${APP_ENV}
-APP_ORIGIN=http://localhost:3033
-API_BASE_URL=${APP_ORIGIN}
+# Model Configuration
+MODEL=gpt-4.1-2025-04-14
+EMBEDDING_MODEL=mxbai-embed-large
+EMBEDDING_MODEL_SIZE=1024
 
+# Optional: Ollama Configuration (if using local Ollama)
+# OLLAMA_URL=http://localhost:11434
 
-SESSION_SECRET=27192e6432564f4788d55c15131bd5ac
-ENCRYPTION_KEY=27192e6432564f4788d55c15131bd5ac
+# Authentication
+SESSION_SECRET=your_session_secret_here
+ENCRYPTION_KEY=your_encryption_key_here
+MAGIC_LINK_SECRET=your_magic_link_secret_here
 
-########### Sign.in with google ############
-AUTH_GOOGLE_CLIENT_ID=
-AUTH_GOOGLE_CLIENT_SECRET=
+# Application URLs
+APP_ORIGIN=http://localhost:5173
+LOGIN_ORIGIN=http://localhost:5173
 
-REDIS_HOST=redis
+# Neo4j Configuration (for knowledge graph)
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=your_neo4j_password
+
+# Redis Configuration
+REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_TLS_DISABLED=true
 
+# Email Configuration (optional)
+EMAIL_TRANSPORT=smtp
+FROM_EMAIL=noreply@yourdomain.com
+REPLY_TO_EMAIL=support@yourdomain.com
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your_email@gmail.com
+SMTP_PASSWORD=your_app_password
+
+# Storage Configuration (optional)
+ACCESS_KEY_ID=your_access_key
+SECRET_ACCESS_KEY=your_secret_key
+BUCKET=your_bucket_name
+
+# Google Auth (optional)
+AUTH_GOOGLE_CLIENT_ID=your_google_client_id
+AUTH_GOOGLE_CLIENT_SECRET=your_google_client_secret
+
+# Trigger.dev Configuration (if using trigger as queue provider)
+TRIGGER_PROJECT_ID=your_trigger_project_id
+TRIGGER_SECRET_KEY=your_trigger_secret_key
+TRIGGER_API_URL=https://api.trigger.dev
+TRIGGER_DB=trigger
+
+# Queue Provider (trigger or bullmq)
+QUEUE_PROVIDER=trigger
+
+# Telemetry
+POSTHOG_PROJECT_KEY=phc_SwfGIzzX5gh5bazVWoRxZTBhkr7FwvzArS0NRyGXm1a
+TELEMETRY_ENABLED=true
+TELEMETRY_ANONYMOUS=false
+
+# Email Login (enable/disable email-based login)
 ENABLE_EMAIL_LOGIN=true
 
-NEO4J_URI=bolt://neo4j:7687
-NEO4J_USERNAME=neo4j
-NEO4J_PASSWORD=27192e6432564f4788d55c15131bd5ac
-OPENAI_API_KEY=
-
-
-MAGIC_LINK_SECRET=27192e6432564f4788d55c15131bd5ac
-
-
-NEO4J_AUTH=neo4j/27192e6432564f4788d55c15131bd5ac
-OLLAMA_URL=http://ollama:11434
-
-EMBEDDING_MODEL=text-embedding-3-small
-MODEL=gpt-4.1-2025-04-14
-
-## AWS Bedrock ##
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=us-east-1
-
-QUEUE_PROVIDER=bullmq
-
+# Optional: Whitelist and admin emails (regex patterns)
+# WHITELISTED_EMAILS=.*@yourdomain\.com
+# ADMIN_EMAILS=admin@yourdomain\.com
