--- a/hosting/docker/docker-compose.yaml
+++ b/hosting/docker/docker-compose.yaml
@@ -36,6 +36,7 @@ services:
       - ENABLE_EMAIL_LOGIN=${ENABLE_EMAIL_LOGIN}
       - OLLAMA_URL=${OLLAMA_URL}
       - EMBEDDING_MODEL=${EMBEDDING_MODEL}
+      - EMBEDDING_MODEL_SIZE=${EMBEDDING_MODEL_SIZE}
       - MODEL=${MODEL}
       - TRIGGER_PROJECT_ID=${TRIGGER_PROJECT_ID}
       - TRIGGER_SECRET_KEY=${TRIGGER_SECRET_KEY}
@@ -46,6 +47,7 @@ services:
       - FROM_EMAIL=${FROM_EMAIL}
       - RESEND_API_KEY=${RESEND_API_KEY}
       - COHERE_API_KEY=${COHERE_API_KEY}
+      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
       - QUEUE_PROVIDER=${QUEUE_PROVIDER}
       - TELEMETRY_ENABLED=${TELEMETRY_ENABLED}
       - TELEMETRY_ANONYMOUS=${TELEMETRY_ANONYMOUS}
