--- a/hosting/docker/docker-compose.yaml
+++ b/hosting/docker/docker-compose.yaml
@@ -5,7 +5,6 @@ x-logging: &logging-config
     max-file: ${LOGGING_MAX_FILES:-5}
     compress: ${LOGGING_COMPRESS:-true}
 
-
 services:
   core:
     container_name: core-app
@@ -77,7 +76,7 @@ services:
     networks:
       - core
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-docker}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-docker} -d ${POSTGRES_DB:-core}"]
       interval: 10s
       timeout: 5s
       retries: 5
